--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.4",
     "multer": "^1.4.4",
     "session-file-store": "^1.5.0"
   },
